--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,15 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
 }
 
 dependencies {
@@ -40,6 +49,9 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
 
+    // Anko Commons
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"
+
     //Coroutines dependencies
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
@@ -51,6 +63,9 @@ dependencies {
     // Coroutines Lifecycle Scopes
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+
+    //Coroutines based image downloading and caching library
+    implementation 'io.coil-kt:coil:0.9.5'
 
     // Material Design & Navigation graph
     implementation 'com.google.android.material:material:1.1.0'
